--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=123456
 #使用druid数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+#允许DispatcherServlet抛出NoHandlerFoundException
+spring.mvc.throw-exception-if-no-handler-found=true
+#禁止浏览器通过url路径访问静态资源
+spring.resources.add-mappings=false
