--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.mvc.throw-exception-if-no-handler-found=true
 #禁止浏览器通过url路径访问静态资源
 spring.resources.add-mappings=false
+
+#配置spring boot对redis的依赖
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=10
+
+#设置jedis连接池
+spring.redis.jedis.pool.max-active=50
+spring.redis.jedis.pool.min-idle=20
